Add functionality for selected option and add the option to choose image-options

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<article>
 
-			<div data-pg-ng-dropdown data-options="list"></div>
+			<div data-pg-ng-dropdown image-options="true" selected="0" data-options="list"></div>
 
 		</article>		
 
