Does some layout improvements

--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
 	<section ng-init="list = [
 		{
 			text: 'Carl Sagan',
-			value: 0,
 		},
 		{
 			text: 'Stephen Hawking',
-			value: 1,
 		},
 		{
 			text: 'Michio Kaku',
-			value: 2,
 		},
 		{
 			text: 'Niel deGrasse',
-			value: 3,
+		},
+		{
+			text: 'Isaac Newton',
 		},
 	]">
 
