Add array notation to the template variable

--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
 			text: 'Michio Kaku',
 		},
 		{
-			text: 'Niel deGrasse',
+			text: 'Niel deGrasse Tysson',
 		},
 		{
-			text: 'Isaac Newton',
+			text: 'Sir Isaac Newton',
 		},
 	]">
 
 		<article>
 
-			<div data-pg-ng-dropdown image-options="true" selected="0" data-options="list"></div>
+			<div data-pg-ng-dropdown selected="0" data-options="list"></div>
+			<div data-pg-ng-dropdown selected="3" data-options="list"></div>
+			<div data-pg-ng-dropdown image-options="true" selected="2" data-options="list" ></div>
 
 		</article>		
 
