Get image src from the provided data

--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@
 	<section ng-init="list = [
 		{
 			text: 'Carl Sagan',
+			image: 'src/img/user.png',
 		},
 		{
 			text: 'Stephen Hawking',
+			image: 'src/img/user.png',
 		},
 		{
 			text: 'Michio Kaku',
+			image: 'src/img/user.png',
 		},
 		{
 			text: 'Niel deGrasse Tysson',
+			image: 'src/img/user.png',
 		},
 		{
 			text: 'Sir Isaac Newton',
+			image: 'src/img/user.png',
 		},
 	]">
 
