--- a/index.html
+++ b/index.html
@@ -36,15 +36,31 @@
 			text: 'Sir Isaac Newton',
 			image: 'src/img/user.png',
 		},
+		{
+			text: 'Blaise Pascal',
+			image: 'src/img/user.png',
+		},
+		{
+			text: 'Galileo Galilei',
+			image: 'src/img/user.png',
+		},
+		{
+			text: 'Christian Doppler',
+			image: 'src/img/user.png',
+		},
+		{
+			text: 'Nikola Tesla',
+			image: 'src/img/user.png',
+		},
 	]">
 
 		<article>
 
 			<div data-pg-ng-dropdown selected="0" data-options="list"></div>
 			<div data-pg-ng-dropdown selected="3" data-options="list"></div>
-			<div data-pg-ng-dropdown image-options="true" selected="2" data-options="list" ></div>
+			<div data-pg-ng-dropdown image-options="true" selected="2" data-options="list"></div>
 
-		</article>		
+		</article>
 
 	</section>
 
