--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/style/pg-ng-dropdown.css">
+  <link rel="stylesheet" href="src/style/pg-ng-dropdown.min.css">
   <title>pg-ng-dropdown</title>
 
 </head>
@@ -58,7 +58,7 @@
 
 			<div data-pg-ng-dropdown selected="0" data-options="list"></div>
 			<div data-pg-ng-dropdown selected="3" data-options="list"></div>
-			<div data-pg-ng-dropdown image-options="true" selected="2" data-options="list"></div>
+			<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list"></div>
 
 		</article>
 
