--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/style/pg-ng-dropdown.min.css">
+  <link rel="stylesheet" href="src/style/pg-ng-dropdown.css">
   <title>pg-ng-dropdown</title>
 
 </head>
