Add more info to readme.md, create public folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body ng-app="pg-ng-dropdown">
+<body ng-app="pg-ng-dropdown-demo">
 	
 	<section ng-init="list = [
 		{
@@ -68,5 +68,6 @@
 
 <script src="node_modules/angular/angular.js"></script>
 <script src="src/js/pg-ng-dropdown.js"></script>
+<script src="public/js/app.js"></script>
 
 </html>
