--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 </body>
 
-<script src="node_modules/angular/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="src/js/pg-ng-dropdown.js"></script>
 <script src="public/js/app.js"></script>
 
