--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 
 		<article>
 
-			<div data-pg-ng-dropdown selected="0" data-options="list"></div>
-			<div data-pg-ng-dropdown selected="3" data-options="list"></div>
-			<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list"></div>
+			<div class="container">
+				<div data-pg-ng-dropdown selected="0" data-options="list"></div>
+				<div data-pg-ng-dropdown selected="3" data-options="list"></div>
+				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list"></div>				
+			</div>
 
 		</article>
 
