--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <link rel="stylesheet" href="src/style/pg-ng-dropdown.css">
   <title>pg-ng-dropdown</title>
 
+  <script>
+
+  window.test = function(){
+  	console.log('hey!');
+  };
+
+  </script>
+
 </head>
 
 <body ng-app="pg-ng-dropdown-demo">
@@ -54,7 +62,7 @@
 		},
 	]">
 
-		<article>
+		<article ng-controller="test">
 
 			<div class="container">
 				<div data-pg-ng-dropdown selected="0" data-options="list"></div>
