Add initial text support

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<article ng-controller="test">
 
 			<div class="container">
-				<div data-pg-ng-dropdown selected="0" data-options="list"></div>
+				<div data-pg-ng-dropdown selected="Choose a genius" data-options="list"></div>
 				<div data-pg-ng-dropdown selected="3" data-options="list"></div>
 				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list"></div>				
 			</div>
