Temporary remove long name until layout is fixed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			image: 'src/img/user.png',
 		},
 		{
-			text: 'Niel deGrasse Tysson',
+			text: 'Niel deGrasse',
 			image: 'src/img/user.png',
 		},
 		{
