Temporary remove long name until layout is fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			image: 'src/img/user.png',
 		},
 		{
-			text: 'Sir Isaac Newton',
+			text: 'Isaac Newton',
 			image: 'src/img/user.png',
 		},
 		{
