Updte README.md

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 		<article ng-controller="test">
 
 			<div class="container">
-				<div data-pg-ng-dropdown name="genius1" selected="Choose a genius" data-options="list"></div>
-				<div data-pg-ng-dropdown name="genius2" selected="3" data-options="list"></div>
-				<div data-pg-ng-dropdown name="genius3" image-options="true" selected="8" data-options="list"></div>
+				<div data-pg-ng-dropdown selected="Choose a genius" data-options="list"></div>
+				<div data-pg-ng-dropdown selected="3" data-options="list"></div>
+				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list"></div>				
 			</div>
 
 		</article>
