Add focused dropdown style and enter functionality

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 		<article ng-controller="test">
 
 			<div class="container">
-				<div data-pg-ng-dropdown selected="Choose a genius" data-options="list"></div>
-				<div data-pg-ng-dropdown selected="3" data-options="list"></div>
-				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list"></div>				
+				<div data-pg-ng-dropdown selected="Choose a genius" data-options="list" tabindex="1"></div>
+				<div data-pg-ng-dropdown selected="3" data-options="list" tabindex="2"></div>
+				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list" tabindex="3"></div>
 			</div>
 
 		</article>
