Add dynamic height functionality feature

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<article ng-controller="test">
 
 			<div class="container">
-				<div data-pg-ng-dropdown selected="Choose a genius" data-options="list" tabindex="1"></div>
+				<div data-pg-ng-dropdown selected="With Dynamic Height" data-options="list" tabindex="1" dynamic-height="true"></div>
 				<div data-pg-ng-dropdown selected="3" data-options="list" tabindex="2"></div>
 				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list" tabindex="3"></div>
 			</div>
