--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 		<article ng-controller="test">
 
 			<div class="container">
-				<div data-pg-ng-dropdown selected="With Dynamic Height" data-options="list" tabindex="1" dynamic-height="true"></div>
+				<div data-pg-ng-dropdown selected="With Dynamic Height" data-options="list" tabindex="1" data-dynamic-height="true"></div>
 				<div data-pg-ng-dropdown selected="3" data-options="list" tabindex="2"></div>
 				<div data-pg-ng-dropdown image-options="true" selected="8" data-options="list" tabindex="3"></div>
+				<div data-pg-ng-dropdown selected="4" data-disabled="testDisabled()" data-options="list" tabindex="1" data-dynamic-height="true"></div>				
 			</div>
 
 		</article>
